test/reject/tine_forward_reference.rk
rake forward_tine(values: f32s) -> f32s:
  tine #first when #later
  tine #later when values >= <0.0>

  through #first else <0.0> into selected:
    values

  return sweep:
    | #first => selected
    | _      => <0.0>
